properly set the default style isntead of ignoring it - fixes some issues with format copying

BUG: 343331